ADD_SUBDIRECTORY(IO)
SET(Sources_ILDG     IO/ILDGinfo_ILDGinfo.cpp)
SET(Sources_MILC     IO/MILCinfo_MILCinfo.cpp)
SET(Sources_Scidac   IO/Scidacinfo_Scidacinfo.cpp)
SET(Sources_IO       IO/load.cpp)
ADD_LIBRARY(ILDG ${Sources_ILDG})
TARGET_LINK_LIBRARIES(ILDG Tool Lime)
ADD_LIBRARY(MILC ${Sources_MILC})
TARGET_LINK_LIBRARIES(MILC Tool Lime)
ADD_LIBRARY(Scidac ${Sources_Scidac})
TARGET_LINK_LIBRARIES(Scidac Tool Lime)
ADD_LIBRARY(IO)