ADD_SUBDIRECTORY(IO)
SET(Sources_ILDG     IO/ILDGinfo_ILDGinfo.cpp)
SET(Sources_MILC     IO/MILCinfo_MILCinfo.cpp)
SET(Sources_Scidac   IO/Scidacinfo_Scidacinfo.cpp)
SET(Sources_IO       IO/load.cpp IO/save.cpp)
ADD_LIBRARY(IO  ${Sources_ILDG} ${Sources_MILC} ${Sources_Scidac} ${Sources_IO})
TARGET_LINK_LIBRARIES(IO Tool Lime)
