SET(Sources_clime c-lime/lime_fseeko.cpp c-lime/lime_header.cpp c-lime/lime_reader.cpp c-lime/lime_utils.cpp c-lime/lime_writer.cpp)
SET(Sources_ReadData ReadData/ReadData_a.cpp ReadData/ReadData_b.cpp ReadData/ReadData.h)
SET(Sources_Reader Reader/Reader_a.cpp Reader/Reader_b.cpp Reader/Reader_c.cpp Reader/Reader.h)
SET(Sources_WriteData WriteData/WriteData_a.cpp WriteData/WriteData_b.cpp WriteData/WriteData.h)
SET(Sources_Writer Writer/Writer_a.cpp Writer/Writer.h)
ADD_LIBRARY(Lime ${Sources_clime} ${Sources_Data} ${Sources_Reader})