SET(Sources_Buffer Buffer.h)
SET(Sources_Component Component.h)
SET(Sources_Com Com/Com.cpp Com.h Com/Com_setup.cpp Com/Com_Com.cpp)
SET(Sources_Correlator Correlator.h)
SET(Sources_Field Field.h)
SET(Sources_Grid Grid.h)
ADD_LIBRARY(Core ${Sources_Buffer} ${Sources_Component} ${Sources_Com} ${Sources_Correlator} ${Sources_Field} ${Sources_Grid})
SET_TARGET_PROPERTIES(Core PROPERTIES LINKER_LANGUAGE CXX)
