# ADD_SUBDIRECTORY(IO)
# SET(Sources_ILDG   IO/ILDGinfo_ILDGinfo.cpp)
# SET(Sources_Scidac IO/Scidacinfo_Scidacinfo.cpp)
# SET(Sources_IO     IO/load.cpp IO/save.cpp)
# ADD_LIBRARY(IO ${Sources_ILDG} ${Sources_Scidac} ${Sources_IO})
# TARGET_LINK_LIBRARIES(IO Tool Lime)

ADD_SUBDIRECTORY(IO)
SET(Sources_IO  IO/loadPropagator_a.cpp IO/loadPropagator_b.cpp IO/loadScidacInfo.cpp IO/savePropagator.cpp IO/savePropagatorInfo.cpp IO/savePropagatorType.cpp IO/ScidacInfo_ScidacInfo.cpp)
ADD_LIBRARY(IO ${Sources_IO})
